--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,52 @@
-# Node dependencies
-Client/node_modules
-Server/node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Environment files
+# Dependency directories
+node_modules/
+Client/node_modules/
+Server/node_modules/
+
+# Environment variables
+.env
 Client/.env
 Server/.env
 
 # Build outputs
-Client/dist
-Client/build
+dist/
+dist-ssr/
+Client/dist/
+Client/build/
+Server/build/
 
-# Logs
-*.log
+# Coverage / testing
+coverage/
 
-# System files
+# Local development
+*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS generated files
 .DS_Store
+Thumbs.db
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Optional: backend cache or temp files
+Server/tmp/
